tests/rosetta/out/Fortran/anonymous-recursion-1.error
gfortran: exit status 1
/tmp/anonymous-recursion-1.f90:12:3:

   12 |   main()
      |   1
Error: Unclassifiable statement at (1)
/tmp/anonymous-recursion-1.f90:34:7:

   34 |       n = arr0(i0)
      |       1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
